# slurm-rhoai-benchmarks

./: .env.example  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: docs.yml
docs/: conf.py  index.md  methodology.md  metrics.md  next-steps.md  results.md  runbook.md  scenarios.md
manifests/: 00-namespace.yaml  02-clusterqueue-bench.yaml  03-localqueue-bench.yaml  04-priorityclasses.yaml  05-checkpoint-pvc.yaml
notebooks/: 1-single-gpu.ipynb  2-multi-gpu-ddp.ipynb  3-multi-node.ipynb  4-fault-tolerant.ipynb  5-gang-scheduling.ipynb  6-queue-priority.ipynb  7-hpc-math.ipynb
results/fault-tolerant/2026-07-14 08:11:53/: events.json  result.json
results/fault-tolerant/2026-07-14 08:16:42/: events.json  result.json
results/fault-tolerant/2026-07-14 08:21:31/: events.json  result.json
results/gang-scheduling/2026-07-14 08:30:38/: events.json  result.json
results/gang-scheduling/2026-07-14 08:34:35/: events.json  result.json
results/gang-scheduling/2026-07-14 08:38:26/: events.json  result.json
results/multi-gpu-ddp/2026-07-13 15:12:25/: events.json  result.json
results/multi-gpu-ddp/2026-07-13 15:13:23/: events.json  result.json
results/multi-gpu-ddp/2026-07-13 15:14:21/: events.json  result.json
results/multi-node/2026-07-13 17:40:37/: events.json  result.json
scenarios/: 1-single-gpu.yaml  2-multi-gpu-ddp.yaml  3-multi-node.yaml  4-fault-tolerant.yaml  5-gang-scheduling.yaml  6-queue-priority.yaml
scripts/: export_knowledge.py
src/bench/: config.py  schemas.py  utils.py
(+33 files in other folders)
