[project]
name = "slurm-rhoai-benchmarks"
version = "0.1.0"
description = "Benchmark harness for Slurm-to-RHOAI migration evaluation on OpenShift AI"
requires-python = ">=3.12"
dependencies = [
    "kubeflow>=0.4.1",
    "kubernetes>=35.0.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "rich>=15.0.0",
    "typer>=0.26.8",
]

[project.scripts]
bench = "bench.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bench"]

[tool.ruff]
target-version = "py312"
line-length = 99
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.21",
]
docs = [
    "ipykernel>=7.3.0",
    "myst-nb>=1.4.0",
    "nbconvert>=7.17.1",
    "sphinx>=9.1.0",
    "sphinx-rtd-theme>=3.1.0",
]
